# poetry-import

./: LICENSE  README.md  pyproject.out.toml  pyproject.toml
poetry_import/: main.py
tests/: test_poetry_import.py
tests/data/: dev-requirements.in  dev-requirements.txt  pyproject.toml  requirements.in  requirements.txt  setup.py  test_requirements.txt
