[tool.poetry]
name = "poetry-import"
version = "0.1.0"
description = "CLI utility that helps you migrate from Python pip requirements to Poetry pyproject.toml + poetry.lock."
authors = ["BrandonLWhite <brandonlwhite@gmail.com>"]

[tool.poetry.scripts]
poetry-import = "poetry_import.main:main"

[tool.poetry.dependencies]
python = "^3.9"
pip = "^22.1.1"
toml = "^0.10.2"
packaging = "^21.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
