[tool.poetry]
name = "upside-core"
version = "0.0.0"
description = "A collection of useful bits of python code."
repository = "https://github.com/upside-services/upside-core"
authors = ["GetUpside <info@getupside.com>"]
readme = "README.md"
packages = [
    { include = "upside_core" }
]

[[tool.poetry.source]]
name = "jfrog"
url = "https://upside.jfrog.io/upside/api/pypi/upside-python/simple/"
default = true

[tool.poetry.dependencies]
python = "^3.6"
boto3 = "~=1.12"
dataclasses = { version = "^0.6", python = "<3.7" } # This is needed for py3.6, but is instrinsic to 3.7+
deprecated = "~=1.2"
frozendict = "~=1.2"
google-api-python-client = "~=1.8"
oauth2client = "~=4.1"
pbkdf2 = "~=1.3"
python-json-logger = "~=2.0"
python-dateutil = "~=2.8"
requests = "~=2.9"
semver = "~=2.9"
simplejson = "~=3.17"
six = "~=1.15"
upside_model = "~=6.8"
marshmallow = "~=2.21"

[tool.poetry.dev-dependencies]
pytest = "*"
pytest-cov = "*"
pylint = "*"
bunch = "~=1.0"
lib-test = "~=2.1"
mock = "~=4.0"
requests-mock = "~=1.8.0"
moto = "*"
httpretty = "*"
"backports.cached-property" = "*"
pydash = "*"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = '-m"not remote"'
markers = [
    "remote: mark a test as performing a remote connection"
]